scrollbar and overflow fixed, hopefully

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -30,7 +30,6 @@
 
 body {
   min-height: 100vh;
-  overflow: hidden;
 }
 
 .container_pos {
@@ -62,6 +61,7 @@ body {
 
 .workspace {
   grid-area: workspace;
+  overflow: hidden;
 }
 
 .footer {
@@ -257,6 +257,34 @@ body {
   border-bottom: 0.02rem solid rgba(255, 255, 255, 0.472);
 }
 
+.wrapper_order_list {
+  width: 100%;
+  height: 500px;
+  overflow: hidden;
+  overflow-y: scroll;
+  /* width */
+}
+
+/* custom scrollbar */
+::-webkit-scrollbar {
+  width: 20px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #d6dee1;
+  border-radius: 20px;
+  border: 6px solid transparent;
+  background-clip: content-box;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #a8bbbf;
+}
+
 .order_total {
   font-size: 1.2rem;
 }
@@ -276,6 +304,7 @@ body {
   color: #f0f0f0;
   border-radius: 0.5rem;
   padding: 0.6rem;
+  margin-top: 1rem;
   font-size: 1.2rem;
   font-weight: 400;
   border: 0;
@@ -288,6 +317,7 @@ body {
   grid-template-columns: repeat(3, minmax(0, 1fr));
   grid-template-rows: auto;
   gap: 0.3rem;
+  position: static;
 }
 
 .button_footer {
